slider, home page brand anime

--- a/index.html
+++ b/index.html
@@ -15,12 +15,73 @@
 </head>
 
 <body>
-  <header class="header" id="header"></header>
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="index.html" class="nav__logo">
+        <img src="assets/img/logo.png" alt="logo" class="nav__logo-img">
+      </a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link active-link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Online Anime</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Our Process</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Plans</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
   <main class="main">
-    <section class="home"></section>
+    <section class="home">
+      <div class="home__container container grid">
+        <div class="home__content">
+          <h1 class="home__title">BEST ANIME & MANGA STREAMING PLATFORM</h1>
+          <p class="home__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis minus,
+            perspiciatis cupiditate sunt vero, ea quod recusandae eius reiciendis esse tempora. Veritatis aliquam
+            voluptatum, blanditiis error adipisci necessitatibus ducimus!
+          </p>
+          <a href="#" class="btn">Start Free Trial</a>
+        </div>
+        <img src="assets/img/home.png" alt="home page image" class="home__img">
+      </div>
+    </section>
 
-    <section class="brand"></section>
+    <section class="brand">
+      <div class="swiper brand-swiper container">
+        <div class="swiper-wrapper">
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-1.png" alt="logo" class="brand__logo">
+          </div>
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-2.png" alt="logo" class="brand__logo">
+          </div>
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-3.png" alt="logo" class="brand__logo">
+          </div>
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-4.png" alt="logo" class="brand__logo">
+          </div>
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-5.png" alt="logo" class="brand__logo">
+          </div>
+          <div class="brand__item swiper-slide">
+            <img src="assets/img/logo-6.webp" alt="logo" class="brand__logo">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="special__anime container section"></section>
 
