--- a/index.html
+++ b/index.html
@@ -425,7 +425,121 @@
     </section>
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer__container container grid">
+      <div class="footer__content">
+        <h3 class="footer__title">Popular Anime</h3>
+
+        <div class="footer__anime">
+
+          <div class="footer__anime-item">
+            <img src="assets/img/anime-1.jpg" alt="anime">
+
+            <div class="item__data">
+              <h4 class="item__title">Lorem ipsum dolor, sit amet consectetur adipisicing</h4>
+              <span class="item__details">2020, Action</span>
+              <p class="item__rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+          <div class="footer__anime-item">
+            <img src="assets/img/anime-4.png" alt="anime">
+
+            <div class="item__data">
+              <h4 class="item__title">Lorem ipsum dolor, sit amet consectetur adipisicing</h4>
+              <span class="item__details">2020, Action</span>
+              <p class="item__rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+          <div class="footer__anime-item">
+            <img src="assets/img/anime-7.jpg" alt="anime">
+
+            <div class="item__data">
+              <h4 class="item__title">Lorem ipsum dolor, sit amet consectetur adipisicing</h4>
+              <span class="item__details">2020, Action</span>
+              <p class="item__rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Latest Tweet</h3>
+
+        <div class="footer__tweet">
+
+          <div class="tweet__item">
+            <i class="fa-brands fa-square-twitter tweet__icon"></i>
+
+            <div class="tweet__data">
+              <h4 class="tweet__title">Lorem Impsum is simply dummy</h4>
+              <span class="tweet__details">Action, 2020</span>
+            </div>
+          </div>
+
+          <div class="tweet__item">
+            <i class="fa-brands fa-square-twitter tweet__icon"></i>
+
+            <div class="tweet__data">
+              <h4 class="tweet__title">It is long established fact that a reader will be distracted</h4>
+              <span class="tweet__details">Action, 2020</span>
+            </div>
+          </div>
+
+          <div class="tweet__item">
+            <i class="fa-brands fa-square-twitter tweet__icon"></i>
+
+            <div class="tweet__data">
+              <h4 class="tweet__title">There are many variations of passages of lorem</h4>
+              <span class="tweet__details">Action, 2020</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Instagram Feed</h3>
+
+        <div class="footer__instagram grid">
+          <img src="assets/img/anime-13.jpg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-6.jpeg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-8.png" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-10.jpeg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-9.jpeg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-12.jpg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-3.jpg" alt="anime feed image" class="feed__img">
+          <img src="assets/img/anime-4.png" alt="anime feed image" class="feed__img">
+        </div>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Banner</h3>
+        <img src="assets/img/banner.png" alt="banner image" class="banner__img">
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <p class="footer__copyright">Copyright @ Anime 2023</p>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
